# fscleaner

./: .gitignore  AppSettings.qml  ArchiveViewerWindow.qml  CMakeLists.txt  FileInfo.qml  FilesTreeHeader.qml  FilesTreeMenu.qml  FilesTreeView.qml  FoldersTreeViewDelegate.qml  LICENSE  Main.qml  README.md  SelectFolderButton.qml  SelectFolderPage.qml  SettingsAddFolderDialog.qml  SettingsPage.qml  archivemodel.cpp  archivemodel.h  filemetadata.cpp  filemetadata.h  filesystemmodel.cpp  filesystemmodel.h  filetypeicon.cpp  filetypeicon.h  find_libav_deps.py.in  iconimageprovider.cpp  iconimageprovider.h  main.cpp  me.zaval.fsCleaner.desktop  me.zaval.fsclean.yaml  processrunner.cpp  processrunner.h  qtquickcontrols2.conf  uihelper.cpp  uihelper.h
+linux/: SettingsAddFolderDialog.qml
core/: CMakeLists.txt  hashcalculator.cpp  hashcalculator.h  helper.cpp  helper.h  mediafileinfo.cpp  mediafileinfo.h  mediainfoextractor.cpp  mediainfoextractor.h
fsscan/: CMakeLists.txt  argumentparser.cpp  argumentparser.h  database.cpp  database.h  fshelper.cpp  fshelper.h  main.cpp  threadpool.cpp  threadpool.h
icons/dataicontheme/: convert.sh  index.theme
resources/icons/: resizer.sh
